<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="675dp"
    tools:context=".props_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:padding="10dp"
            android:text="@string/rents"
            android:textColor="@color/white"
            android:background="@drawable/title_screen"
            android:textSize="25dp"
            android:fontFamily="@font/bungee" />


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="420dp"
            android:background="@drawable/text_screen"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                style="@style/text_screen"
                android:text="@string/products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                style="@style/info_screen"
                android:text="Ejemplo de producto"
                android:layout_width="270dp"
                android:id="@+id/product_rent_txt"
                android:layout_height="wrap_content"
                 />

            <TextView
                style="@style/text_screen"
                android:text="@string/clients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                style="@style/info_screen"
                android:text="Ejemplo de cliente"
                android:id="@+id/client_rent_txt"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/text_screen"
                android:text="@string/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                style="@style/info_screen"
                android:hint="@string/number"
                android:id="@+id/income_rent_txt"
                android:layout_width="270dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:padding="6dp"/>

            <TextView
                style="@style/text_screen"
                android:text="@string/dateout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/info_screen"
                android:text="00/00/0000"
                android:id="@+id/dategive_rent_bt"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:padding="6dp"/>


            <TextView
                style="@style/text_screen"
                android:text="@string/datein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/info_screen"
                android:text="00/00/0000"
                android:id="@+id/datereturn_rent_bt"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:padding="6dp"/>



        </LinearLayout>





    </LinearLayout>



</FrameLayout>