<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="675dp"
    tools:context=".props_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/clients"
            android:textColor="@color/white"
            android:background="@drawable/title_screen"
            android:textSize="25dp"
            android:fontFamily="@font/bungee" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/client_example"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"/>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="330dp"
            android:background="@drawable/text_screen"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                style="@style/text_screen"
                android:text="@string/names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                style="@style/info_screen"
                android:layout_width="270dp"
                android:id="@+id/names_client_txt"
                android:layout_height="wrap_content"
                android:padding="6dp"/>

            <TextView
                style="@style/text_screen"
                android:text="@string/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                style="@style/info_screen"
                android:id="@+id/last_client_txt"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:padding="6dp"/>

            <TextView
                style="@style/text_screen"
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                style="@style/info_screen"
                android:id="@+id/address_client_txt"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:padding="6dp"/>


            <TextView
                style="@style/text_screen"
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                style="@style/info_screen"
                android:hint="@string/number"
                android:id="@+id/phone_client_txt"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:padding="6dp"/>



        </LinearLayout>





    </LinearLayout>






</FrameLayout>